force-app/main/default/objects/Account_Team__c/Account_Team__c.object-meta.xml
<CustomObject>
    <label>Customer Team</label>
    <nameField>
        <displayFormat>AT-{yyyymm}{00000}</displayFormat>
        <label>Customer Team Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>