force-app/main/default/objects/Account_Team__c/fields/Account_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>Account_OwnerId__c</fullName>
    <formula>CASESAFEID( Customer__r.OwnerId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account OwnerId</label>
    <type>Text</type>
</CustomField>