force-app/main/default/objects/Account_Team__c/fields/Account_Share__c.field-meta.xml
<CustomField>
    <fullName>Account_Share__c</fullName>
    <label>Account/Contact Share</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Share</valueSetName>
    </valueSet>
</CustomField>