force-app/main/default/objects/Account_Team__c/fields/Add_Operation_Date__c.field-meta.xml
<CustomField>
    <fullName>Add_Operation_Date__c</fullName>
    <label>Latest Performance Shared Date</label>
    <type>Date</type>
</CustomField>