force-app/main/default/objects/Account_Team__c/fields/Company_Dynamics__c.field-meta.xml
<CustomField>
    <fullName>Company_Dynamics__c</fullName>
    <label>Company Dynamics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Share</valueSetName>
    </valueSet>
</CustomField>