force-app/main/default/objects/Account_Team__c/fields/Create_Plant__c.field-meta.xml
<CustomField>
    <fullName>Create_Plant__c</fullName>
    <formula>TEXT(CreatedBy.Delivery_Plant__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Plant</label>
    <type>Text</type>
</CustomField>