force-app/main/default/objects/Account_Team__c/fields/Customer_Owner_Plant__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owner_Plant__c</fullName>
    <formula>Text(Customer__r.Owner.Delivery_Plant__c)</formula>
    <label>Customer Owner Plant</label>
    <type>Text</type>
</CustomField>