force-app/main/default/objects/Account_Team__c/fields/Customer_Sales_Info__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sales_Info__c</fullName>
    <label>Customer Sales Info/Account Receivable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Share</valueSetName>
    </valueSet>
</CustomField>