force-app/main/default/objects/Account_Team__c/fields/Is_Ruuning__c.field-meta.xml
<CustomField>
    <fullName>Is_Ruuning__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Ruuning</label>
    <type>Checkbox</type>
</CustomField>