force-app/main/default/objects/Account_Team__c/fields/Sales_Rep_Country__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Country__c</fullName>
    <formula>Sales_Rep__r.Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Country</label>
    <type>Text</type>
</CustomField>