force-app/main/default/objects/Account_Team__c/fields/Sales_Rep_Delivery_Plant__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Delivery_Plant__c</fullName>
    <formula>TEXT(Sales_Rep__r.Delivery_Plant__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Delivery Plant</label>
    <type>Text</type>
</CustomField>