force-app/main/default/objects/Account_Team__c/fields/Shared_Performance__c.field-meta.xml
<CustomField>
    <fullName>Shared_Performance__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Shared Performance</label>
    <type>Checkbox</type>
</CustomField>