force-app/main/default/objects/Account_Team__c/validationRules/Can_not_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_Change</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT( ISNEW() ),Is_Ruuning__c )</errorConditionFormula>
    <errorMessage>Cannot edit since the sharing process is running.</errorMessage>
</ValidationRule>