force-app/main/default/objects/Account_Team__c/validationRules/CannotChangeUser.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotChangeUser</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Sales_Rep__c)</errorConditionFormula>
    <errorMessage>Can not change the sales rep, please delete and create a new record</errorMessage>
</ValidationRule>